<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.afreecaandroid.ui.viewmodel.TalkCamViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.talkcam.TalkCamDetailFragment">

        <ImageView
            android:id="@+id/iv_talk_cam_detail_bj_profile_image"
            setProfileImageAtDetail="@{viewModel.talkCamBroadCastDetail}"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_talk_cam_detail_broadcast_title"
            style="@style/TextHeadline5.22.bold"
            setTitleAtDetail="@{viewModel.talkCamBroadCastDetail}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_talk_cam_detail_bj_profile_image"
            tools:text="제목" />

        <TextView
            android:id="@+id/tv_talk_cam_detail_bj_nickname"
            style="@style/TextSubtitle1.18"
            setNickNameAtDetail="@{viewModel.talkCamBroadCastDetail}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_cam_detail_broadcast_title"
            tools:text="닉네임" />

        <ImageView
            android:id="@+id/iv_talk_cam_detail_thumb_nail"
            setThumbnailImageAtDetail="@{viewModel.talkCamBroadCastDetail}"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_talk_cam_detail_bj_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
